example2/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
    #saiyam: dwdf
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy:
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
